[package]
name = "code-challenge-2024-soumyadeep9474"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "code-challenge-2024-soumyadeep9474"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4.3"
crypto-hash = "0.3.4"
secp256k1 = { version = "0.29.0", features = ["serde"] }
ripemd = "0.1.3"
bs58 = "0.5.1"
bech32 = "0.11.0"
rust-crypto = "0.2.36"
crypto = "0.5.1"
rand = "0.8.4"

[[test]]
name = "transaction_loader"
path = "src/transaction_loader.rs"

[[test]]
name = "transaction_validator"
path = "src/transaction_validator.rs"

[[test]]
name = "main"
path = "src/main.rs"



